--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
           $('#messages').append($('<li>').text(msg));
           window.scrollTo(0, document.body.scrollHeight);
         });
+        socket.on('something', function(msg){
+          var x = msg;
+          $('#messages').append($('<li>').text(msg));
+          window.scrollTo(0, document.body.scrollHeight);
+        });
       });
     </script>
   </body>
